--- a/AboutBox.resx
+++ b/AboutBox.resx
@@ -117,14 +117,24 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="sangah_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\sangah-logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="kspmis_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\kspmis_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="sangah_logo_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\sangah-logo-2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAGABoAwAAFgAAACgAAAAQAAAAIAAAAAEAGAAAAAAAAAAAAGAAAABgAAAAAAAAAAAA
+        AADf39/w8PDu7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u3w8PDf39/x8O////z/////
+        //////////////////////////////////////7+/f3//f3y8vLu7uz/////////////////////////
+        //////////////////////////7+//zu7ezk4eeHZsZ6WMF9WcN9WcN9WcN8WcN9WcN9WcN8WcN9WcJ8
+        WMF7WcDb0ez////t7e3n5OmDZsdnSLxrTL1rTb5rTb1xU8BxVMFxU8ByU8ByU79xUr5zVsDk3PH////u
+        7u7u7u7////+/v7+///+///8/P3c2/DV0u3W1PHV1PDV1fDU1PDV1fDX1u/W0+/i4unu7u7/////////
+        ///////g4fRJSr8/P7tAQ75AQ71BQ71BQ71AQ709Qbw5ObmfodHu7u7////////////////9/P3P0e7M
+        zu3N0O7Hyu3FyO3FyO3FyO3Fx+zCx+rV1+bo6ey6yu+ywu2zw+20w+20xey6y/C8y+28zfD4+/3/////
+        ///////////////u7u3i5Oplj99Sgt5WhN5WhN5Xg95VhN1Wgtxbhd7d5vf///////7///7+//7+/v/r
+        7e7t7e3x9/3s8/3t8/3t8/3s8/zr8v3r8/vx9Pv7/P77/P77/P77/P7///7+//zr7u3s7O3///3/////
+        //////////////77/vxyu/RIpvNQqfRPqPRNp/LS6fn///3s7e3s7e79//////////////////3///75
+        /P6S0Pxyxfp4x/p3xvp2xvra8P3///7u7e7u7u7/////////////////////////////////////////
+        ///////////////u7u7y8vL////////////////////////////////////////////////////////y
+        8vLf39/w8PDu7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7w8PDf398AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+</value>
   </data>
 </root>
