--- a/i18n/en_US.resx
+++ b/i18n/en_US.resx
@@ -243,4 +243,10 @@
   <data name="review_outcome" xml:space="preserve">
     <value>Review Outcome</value>
   </data>
+  <data name="folder_location" xml:space="preserve">
+    <value>Folder Location</value>
+  </data>
+  <data name="language" xml:space="preserve">
+    <value>Language</value>
+  </data>
 </root>
