--- a/i18n/ko_KR.resx
+++ b/i18n/ko_KR.resx
@@ -252,4 +252,7 @@
   <data name="picture_viewer_settings" xml:space="preserve">
     <value>사진 뷰어 설정</value>
   </data>
+  <data name="picture_viewer" xml:space="preserve">
+    <value>사진 뷰어</value>
+  </data>
 </root>
