--- a/i18n/ko_KR.resx
+++ b/i18n/ko_KR.resx
@@ -205,7 +205,7 @@
     <value>Revision</value>
   </data>
   <data name="revisiondate" xml:space="preserve">
-    <value>수정 날짜</value>
+    <value>Revision날짜</value>
   </data>
   <data name="search" xml:space="preserve">
     <value>검색</value>
