--- a/i18n/en_US.resx
+++ b/i18n/en_US.resx
@@ -282,4 +282,10 @@
   <data name="clss_format_invalid" xml:space="preserve">
     <value>The classification format is not valid, cannot be saved.</value>
   </data>
+  <data name="next_image" xml:space="preserve">
+    <value>Next</value>
+  </data>
+  <data name="previous_image" xml:space="preserve">
+    <value>Previous</value>
+  </data>
 </root>
