--- a/i18n/ko_KR.resx
+++ b/i18n/ko_KR.resx
@@ -283,9 +283,9 @@
     <value>분류 형식이 유효하지 않으며 저장할 수 없습니다.</value>
   </data>
   <data name="next_image" xml:space="preserve">
-    <value>다음</value>
+    <value>다음 &gt;</value>
   </data>
   <data name="previous_image" xml:space="preserve">
-    <value>이전</value>
+    <value>&lt; 이전</value>
   </data>
 </root>
